--- a/css/style.css
+++ b/css/style.css
@@ -687,8 +687,13 @@ Features
 -------------------------------*/
 .feature-box {
   padding: 40px;
-  background: #f8f9fa;
   transition: all .35s ease;
+}
+.feature-box p{
+  font-size: 20px;
+}
+.feature-box h4{
+  font-size: 30px;
 }
 
 .feature-box i {
@@ -701,26 +706,8 @@ Features
   background: #4125dd;
 }
 
-.feature-box:hover {
-  background: #4125dd;
-  transform: scale(1.01);
-}
 
-.feature-box:hover i {
-  color: #ffffff;
-}
 
-.feature-box:hover h4 {
-  color: #ffffff;
-}
-
-.feature-box:hover p {
-  color: rgba(255, 255, 255, 0.8);
-}
-
-.feature-box:hover .divider {
-  background: #e8e8e8;
-}
 
 .feature-box.active {
   background: #4125dd;
@@ -1571,4 +1558,64 @@ Responsive
 .date-index{
   color: orangered;
   font-weight: 600;
+}
+
+.heading-conference{
+  text-align: center;
+  font-size: 30px;
+}
+.carousel-item img{
+  width: 100%; 
+  height: 450px; 
+  background-color: #000;
+  opacity: 0.8;
+}
+.carousel-item{
+  background-color: #000;
+}
+/** Carousel **/
+.carousel-caption h5{
+  font-size: 30px;
+  color: #ffffff;
+}
+
+.carousel-caption p{
+  font-size: 15px;
+}
+
+.mode-box{
+  height: 150px;
+  width: 300px;
+  background-color: #c1c1c1;
+  border-radius: 5px;
+  text-align: center;
+  margin: 40px;
+  align-items: center;
+  padding: 30px;
+}
+.feature-box-container{
+  background-color: #c7c7c7;
+  margin-bottom: 30px;
+}
+
+.college-img{
+  height: 100% ;
+  overflow: hidden;
+}
+
+.springer-logo{
+  height: 75px;
+  width: 190px;
+}
+
+.anits-img{
+  height: 200px;
+  width: 250px;
+}
+.conference-text{
+  text-align: center;
+}
+.csi-logo{
+  height: 200px;
+  width: 200px;
 }
