--- a/css/style.css
+++ b/css/style.css
@@ -278,14 +278,18 @@ header
   font-weight: 700;
   color: #4125dd;
 }
+.nav-item{
+  color: #3725dd;
+}
 
 .main-nav {
   transition: all .7s linear;
+  background-color: #FFF2D8;
 }
 
 .main-nav .nav-link {
   font-size: 14px;
-  padding: 26px 18px !important;
+  padding: 15px 18px !important;
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
